# ignore_flipped

./: Cargo.toml  README.md
examples/: walk.rs
src/: lib.rs  types.rs  walk.rs
tests/: gitignore_matched_path_or_any_parents_tests.rs
