[package]
name = "ignore_flipped"
version = "0.4.18"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Fork of ignore crate with the ability to flip the result.
"""
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense/MIT"
edition = "2018"

[lib]
name = "ignore_flipped"
bench = false

[dependencies]
crossbeam-utils = "0.8.0"
globset = "0.4.7"
lazy_static = "1.1"
log = "0.4.5"
memchr = "2.1"
regex = "1.1"
same-file = "1.0.4"
thread_local = "1"
walkdir = "2.2.7"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.2"

[dev-dependencies]
crossbeam-channel = "0.5.0"

[features]
simd-accel = ["globset/simd-accel"]
